# midea

./: CMakeLists.txt  Makefile  README.adoc
lib/eigen/: CMakeLists.txt
lib/json/: CMakeLists.txt
lib/midifile/: CMakeLists.txt
lib/rtmidi/: CMakeLists.txt
model/: model-0.json  model_1.json  model_10.json  model_11.json  model_12.json  model_13.json  model_14.json  model_15.json  model_16.json  model_17.json  model_18.json  model_19.json  model_2.json  model_20.json  model_21.json  model_22.json  model_23.json  model_24.json  model_25.json  model_26.json  model_27.json  model_28.json  model_29.json  model_3.json  model_30.json  model_31.json  model_32.json  model_33.json  model_34.json  model_35.json  model_36.json  model_37.json  model_38.json  model_39.json  model_4.json  model_40.json  model_41.json  model_42.json  model_43.json  model_44.json  (+37 more)
sample/: sample_norm_0.mid  sample_norm_1.mid  sample_norm_10.mid  sample_norm_11.mid  sample_norm_12.mid  sample_norm_13.mid  sample_norm_14.mid  sample_norm_15.mid  sample_norm_16.mid  sample_norm_17.mid  sample_norm_18.mid  sample_norm_19.mid  sample_norm_2.mid  sample_norm_20.mid  sample_norm_21.mid  sample_norm_22.mid  sample_norm_23.mid  sample_norm_24.mid  sample_norm_25.mid  sample_norm_26.mid  sample_norm_27.mid  sample_norm_28.mid  sample_norm_29.mid  sample_norm_3.mid  sample_norm_30.mid  sample_norm_31.mid  sample_norm_32.mid  sample_norm_33.mid  sample_norm_34.mid  sample_norm_35.mid  sample_norm_36.mid  sample_norm_37.mid  sample_norm_38.mid  sample_norm_39.mid  sample_norm_4.mid  sample_norm_40.mid  sample_norm_41.mid  sample_norm_42.mid  sample_norm_43.mid  sample_norm_44.mid  (+114 more)
scripts/: mdgen.sh
src/: combiner.cpp  main.cpp  midea.cpp  midiout.cpp  midiprobe.cpp
